--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <head>
   <%- include ("../partials/header.ejs") %>
 </head>
