add error and 404  handling

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -70,9 +70,7 @@
 let sayHello = () => {
   console.log('called, posting')
   axios.post('/Hello/').then((response) => {
-    console.log('received from be');
-    let message = response.data.message;
-    alert(message);
+    //do stuff idk
   })
 }
 
